--- a/PREMIER-DATACOM/css/styles.css
+++ b/PREMIER-DATACOM/css/styles.css
@@ -221,7 +221,8 @@ body {
 }
 
 .read-more-btn:hover {
-    background-color: #e6e6e6;
+    background: #102039;
+    color: white;
 }
 
 .section-title {
@@ -879,10 +880,62 @@ body {
     transition: background-color 0.3s ease;
     width: 200px;
 }
+
 .contact-btn:hover {
     background-color: #0c1a2b;
     color: white;
     transform: translateY(-2px);
-    
+
 }
 
+
+/* blogs */
+
+.blog-card {
+    /* border: 1px solid #102039; */
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    transition: transform 0.3s;
+    background: #F3F4F5;
+}
+
+.blog-card:hover {
+    transform: translateY(-5px);
+}
+
+.blog-image {
+    height: 220px;
+    object-fit: cover;
+    width: 100%;
+}
+
+.blog-meta {
+    font-size: 14px;
+    color: #102039;
+}
+
+.read-more-blog {
+    border: 1px solid #102039;
+    border-radius: 30px;
+    padding: 6px 20px;
+    font-size: 14px;
+    color: #102039;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+.read-more-blog:hover {
+    background: #102039;
+    color: white;
+}
+
+.bi-person {
+    color: #102039;
+    font-size: 16px;
+}
+
+.bi-calendar3 {
+    color: #102039;
+    font-size: 16px;
+}
