--- a/PREMIER-DATACOM/css/styles.css
+++ b/PREMIER-DATACOM/css/styles.css
@@ -148,7 +148,7 @@ html {
     top: 0;
     left: -300px;
     width: 300px;
-    height: 100vh;
+    height: 100%;
     background-color: white;
     z-index: 1050;
     transition: left 0.3s ease;
